tests/ui/traits/alias/not-a-marker.stderr
error: `#[marker]` attribute cannot be used on trait aliases
  --> $DIR/not-a-marker.rs:3:1
   |
LL | #[marker]
   | ^^^^^^^^^
   |
help: `#[marker]` can only be applied to a trait
  --> $DIR/not-a-marker.rs:3:1
   |
LL | #[marker]
   | ^^^^^^^^^

error: aborting due to 1 previous error

